--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-		<link href="css/main.css" rel="stylesheet" type="text/css"/>
+		
 	<title>
-		Light Bulb
+		Search My Soul
 	</title>
 </head>
 
@@ -12,13 +12,9 @@
 
 	<header>
 		<nav>
-				<h1>Light Bulb</h1> 
+				<h1> Search My Soul  </h1> 
 
-				<ul>
-						<li> <a href="index.html">Home</a></li>
-						<li> <a href="pages/about.html">About</a></li>
-						<li> <a href="pages/blog.html">Blog</a></li>
-				</ul>
+				
 		</nav>
 		
 
@@ -26,20 +22,14 @@
 			
 	
 	<h2>
-	<!--	who is the associate professor of cs dept in oxford university-->
+	<!--	who is the associate professor of computer science department in oxford university -->
 	</h2>
-<!--
+
 	<p>
-		This is my first try on html and web development. If there is any mistake or suggestions feel free and help
-		 me @ <a href="https://github.com/elsonjose/elsonjose.github.io/issues">github issues</a>. Thanks. 
+		Search my soul to find the key
 	</p>
 	
-	<div class="row">
-		<div class="col">col1</div>
-		<div class="col">col2</div>
-		<div class="col">col2</div>
-	</div>
-	<footer>©2018 Light Bulb</footer>
+	
 	
 </body>
 </html>
