--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<header>
 		<nav>
-				<h1> <centre> Search My Soul </centre>  </h1> 
+				<h1> <font size="+2"> Search My Soul </font>  </h1> 
 
 				
 		</nav>
