--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 
 	<header>
-		<nav>
-				<h1> <font size="+2"> Search My Soul </font>  </h1> 
+		<center><nav>
+				<h1>  Search My Soul   </h1> 
 
 				
-		</nav>
+			</nav></center>
 		
 
 	</header>
