--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<header>
 		<center><nav>
-				<h1>  Search My Soul   </h1> 
+				<h1 >  Search My Soul   </h1> 
 
 				
 			</nav></center>
@@ -25,10 +25,11 @@
 	<!--	who is the associate professor of computer science department in oxford university -->
 	</h2>
 
+	<center>
 	<p>
 		Search my soul to find the key
 	</p>
-	
+	</center>
 	
 	
 </body>
